--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 
     <meta name="twitter:card" content="summary_large_image" />
     
-    <!-- Vanta.js TRUNK Dependencies -->
+    <!-- Vanta.js Dependencies -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.trunk.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
   </head>
 
   <body>
